Use protobuf.js CDN

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Online Protobuf encoder/decoder</title>
-    <link rel="stylesheet" href="bower_components/normalize.css/normalize.css"/>
     <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
@@ -32,7 +31,7 @@
         </label>
     </div>
 </section>
-<script src="bower_components/protobuf/dist/ProtoBuf.min.js"></script>
+<script src="//cdn.jsdelivr.net/npm/protobufjs@7.1.2/dist/protobuf.min.js"></script>
 <script src="js/frontend.js"></script>
 </body>
 </html>
