Change to encode/decode to base64 instead of hex

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <section>
     <div>
         <label>
-            Enter HEX representation of bytes here.
-            <textarea id="encoded"><08 96 01></textarea>
+            Enter Base64 representation of bytes here.
+            <textarea id="encoded">CJYB</textarea>
         </label>
     </div>
     <div>
